Thu Apr 24 16:47:16 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_orb_tests.lst:

          The DLL_ORB test requires threads.  Disable it when the ST config
          is used.

Thu Apr 24 15:05:50 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * bin/tao_orb_tests.lst:

          Scheduled new regression test for bug #3299.

Thu Apr 24 09:55:00 UTC 2008  Simon Massey  <sma at pristmech dot com>

        * bin/MakeProjectCreator/config/ace_unicode.mpb:
        * bin/MakeProjectCreator/config/global.features:
          Default unicode=0 feature. Unicode does not depend upon MFC,
          may be used together as necessary.

        * examples/Log_Mgs/Log_Msg_MFC/Log_Mgs_MFC.mpc:
        * examples/Log_Mgs/Log_Msg_MFC/Log_Mgs_Unicode_MFC.mpc:
          Split out the unicode requirements.

Thu Apr 24 05:58:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Refcountable_T.{cpp,inl}:
          Use ACE_INLINE

Thu Apr 24 05:47:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-posix.h:
          Reverted change below, already made a similar change which is less risky

        Thu Apr 17 19:27:23 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
        * ace/config-posix.h: Added a check for

        #if defined _XOPEN_STREAMS && _XOPEN_STREAMS == -1
        # define ACE_LACKS_STROPTS_H
        #endif

        so that ACE will compile properly on Fedora 8.  Thanks to
        Jules Colding <colding at 42tools dot com> for this fix.

Thu Apr 17 19:27:23 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/config-posix.h: Added a check for

        #if defined _XOPEN_STREAMS && _XOPEN_STREAMS == -1
        # define ACE_LACKS_STROPTS_H
        #endif

        so that ACE will compile properly on Fedora 8.  Thanks to
        Jules Colding <colding at 42tools dot com> for this fix.

Wed Apr 23 18:29:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
